--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") {5} %>
+  pool: 5
   username: root
   password: 123
   socket: /var/run/mysqld/mysqld.sock
